fixed search result and collection item spacing for mobile devices

--- a/src/components/collection/collection.css
+++ b/src/components/collection/collection.css
@@ -151,6 +151,10 @@ button:hover {
 		grid-gap: 20px;
 	}
 
+	.collection-item {
+		width: 320px;
+	}
+
 	button.new-search-button {
 		float: left;
 		margin-top: -5px;
