--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -66,7 +66,7 @@ button:hover {
 /* Small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 	header {
-		width:110%;
+		width:101%;
 	}
 
 	h1 {
